Crud sur les formations + modif search bar et doc

--- a/AppWeb/Views/Home/Index.cshtml
+++ b/AppWeb/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 <h3 class="mb-5">Find the job that suits you best</h3>
                 <form class="form-inline justify-content-center" action="@Url.Action("SearchOffre","Offre")">
                     <div class="form-group">
-                        @Html.TextBox("searchText", null, new { style= "padding: 1.7rem;font-size: large;", @class= "form-control mx-2 form-control-lg", placeholder = "Ex : Web developer" })
+                        @Html.TextBox("searchText", null, new { style = "padding: 1.7rem;font-size: large;", @class = "form-control mx-2 form-control-lg", placeholder = "Ex : Web developer" })
                     </div>
                     <button type="submit" class="btn btn-primary" style="font-size:1.2rem;padding: 1rem;border-radius: 3rem;"><i class="fa fa-search"></i></button>
                 </form>
@@ -25,9 +25,39 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="mb-2"><b>The jobs of the day</b></h3>
+                <h3 class="mb-2"><b>The recent jobs</b></h3>
             </div>
         </div>
-        @Html.Partial("_listeOffres", Model)
+        @if (Model.Any())
+        {
+            @Html.Partial("_listeOffres", Model)
+        }
+        else
+        {
+            <div class="row py-5" id="pro">
+                <div class="col-md-8 mx-auto text-center">
+                    <h2 class="mb-4">No offers found for today.</h2>
+                    <p class="lead mb-5">Maybe it's time to create your own offer.</p>
+                    <a class="btn btn-primary mr-1 rounded btn-lg text-light" href="@Url.Action("CreateOfferView","Offre")">
+                        <i class="now-ui-icons ui-1_simple-add mr-1"></i> Create an offer
+                    </a>
+                </div>
+            </div>
+        }
     </div>
 </div>
+
+<div class="py-4">
+    <div class="container">
+        <div class="row py-5">
+            <div class="col-md-8 mx-auto text-center">
+                <h2 class="mb-4"> You are looking for employees ? </h2>
+                <p class="lead mb-5">Post you own offer.</p>
+                <a class="btn btn-light mr-1 rounded btn-lg text-primary" href="@Url.Action("CreateOfferView","Offre")">
+                    <i class="now-ui-icons ui-1_simple-add mr-1"></i> Create an offer
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
